--- a/form.html
+++ b/form.html
@@ -8,27 +8,48 @@
     <div class="container p-5 my-5 bg-dark text-white rounded border border-primary">
         <h1 class="text-white">Form</h1>
         <form action="action.php">
-            <div class="mb-3">
-                <label for="fname_id" class="form-label">Firstname: </label>
-                <input type="text" name="fname" id="fname_id" placeholder="Enter Firstname" class="form-control">
+            <div class="row">
+                <div class="col-sm-6">
+                    <div class="mb-3">
+                        <label for="fname_id" class="form-label">Firstname: </label>
+                        <input type="text" name="fname" id="fname_id" placeholder="Enter Firstname" class="form-control">
+                    </div>
+                </div>
+                <div class="col-sm-6">
+                    <div class="mb-3">
+                        <label for="lname_id" class="form-label">Lastname: </label>
+                        <input type="text" name="lname" id="lname_id" placeholder="Enter Lastname" class="form-control">
+                    </div>
+                </div>
             </div>
             <div class="mb-3">
-                <label for="lname_id" class="form-label">Lastname: </label>
-                <input type="text" name="lname" id="lname_id" placeholder="Enter Lastname" class="form-control">
+                <label for="address_id" class="form-label">Address: </label>
+                <input type="text" name="address" id="address_id" placeholder="Enter Address" class="form-control">
             </div>
-            <div class="mb-3">
-                <label for="city_id" class="form-label">City: </label>
-                <input type="text" name="city" id="city_id" placeholder="Enter City" class="form-control">
-            </div>
-            <div class="mb-3">
-                <label for="province_id" class="form-label">Province: </label>
-                <select name="province" id="province_id" class="form-control">
-                    <option value="">SELECT PROVINCE</option>
-                </select>
-            </div>
-            <div class="mb-3">
-                <label for="zip_id" class="form-label">Zip: </label>
-                <input type="text" name="zip" id="zip_id" placeholder="Enter Zip" class="form-control">
+            <div class="row">
+                <div class="col-sm-4">
+                    <div class="mb-3">
+                        <label for="city_id" class="form-label">City: </label>
+                        <input type="text" name="city" id="city_id" placeholder="Enter City" class="form-control">
+                    </div>
+                </div>
+                <div class="col-sm-4">
+                    <div class="mb-3">
+                        <label for="province_id" class="form-label">Province: </label>
+                        <select name="province" id="province_id" class="form-control">
+                            <option value="">----SELECT PROVINCE----</option>
+                            <option value="pampanga">Pampanga</option>
+                            <option value="davao">Davao</option>
+                            <option value="isabela">Isabela</option>
+                        </select>
+                    </div>
+                </div>
+                <div class="col-sm-4">
+                    <div class="mb-3">
+                        <label for="zip_id" class="form-label">Zip: </label>
+                        <input type="text" name="zip" id="zip_id" placeholder="Enter Zip" class="form-control">
+                    </div>
+                </div>
             </div>
             <div class="form-check mb-3">
                 <input type="checkbox" id="remember_me_id" class="form-check-input">
