--- a/form.html
+++ b/form.html
@@ -1,64 +1,68 @@
 <html>
-<head>
-    <title>Bootstrap Form</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-</head>
-<body>
-    <div class="container p-5 my-5 bg-dark text-white rounded border border-primary">
-        <h1 class="text-white">Form</h1>
-        <form action="action.php">
-            <div class="row">
-                <div class="col-sm-6">
-                    <div class="mb-3">
-                        <label for="fname_id" class="form-label">Firstname: </label>
-                        <input type="text" name="fname" id="fname_id" placeholder="Enter Firstname" class="form-control">
+    <head>
+        <title>Bootstrap Form</title>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    </head>
+    <body>
+        <div class="container p-5 my-5 bg-dark text-white rounded border border-primary">
+            <h1 class="text-white">Form</h1>
+            <form action="action.php">
+                <div class="row">
+                    <div class="col-sm-6">
+                        <div class="mb-3">
+                            <label for="fname_id" class="form-label">Firstname: </label>
+                            <input type="text" name="fname" id="fname_id" placeholder="Enter Firstname" class="form-control">
+                        </div>
+                    </div>
+                    <div class="col-sm-6">
+                        <div class="mb-3">
+                            <label for="lname_id" class="form-label">Lastname: </label>
+                            <input type="text" name="lname" id="lname_id" placeholder="Enter Lastname" class="form-control">
+                        </div>
                     </div>
                 </div>
-                <div class="col-sm-6">
-                    <div class="mb-3">
-                        <label for="lname_id" class="form-label">Lastname: </label>
-                        <input type="text" name="lname" id="lname_id" placeholder="Enter Lastname" class="form-control">
+                <div class="mb-3">
+                    <label for="address1_id" class="form-label">Address 1: </label>
+                    <input type="text" name="address1" id="address1_id" placeholder="Enter Address" class="form-control">
+                </div>
+                <div class="mb-3">
+                    <label for="address2_id" class="form-label">Address 2: </label>
+                    <input type="text" name="address2" id="address2_id" placeholder="Enter Address" class="form-control">
+                </div>
+                <div class="row">
+                    <div class="col-sm-4">
+                        <div class="mb-3">
+                            <label for="city_id" class="form-label">City: </label>
+                            <input type="text" name="city" id="city_id" placeholder="Enter City" class="form-control">
+                        </div>
+                    </div>
+                    <div class="col-sm-4">
+                        <div class="mb-3">
+                            <label for="province_id" class="form-label">Province: </label>
+                            <select name="province" id="province_id" class="form-control">
+                                <option value="">----SELECT PROVINCE----</option>
+                                <option value="pampanga">Pampanga</option>
+                                <option value="davao">Davao</option>
+                                <option value="isabela">Isabela</option>
+                            </select>
+                        </div>
+                    </div>
+                    <div class="col-sm-4">
+                        <div class="mb-3">
+                            <label for="zip_id" class="form-label">Zip: </label>
+                            <input type="text" name="zip" id="zip_id" placeholder="Enter Zip" class="form-control">
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="mb-3">
-                <label for="address_id" class="form-label">Address: </label>
-                <input type="text" name="address" id="address_id" placeholder="Enter Address" class="form-control">
-            </div>
-            <div class="row">
-                <div class="col-sm-4">
-                    <div class="mb-3">
-                        <label for="city_id" class="form-label">City: </label>
-                        <input type="text" name="city" id="city_id" placeholder="Enter City" class="form-control">
-                    </div>
+                <div class="form-check mb-3">
+                    <input type="checkbox" id="remember_me_id" class="form-check-input">
+                    <label for="remember_me_id" class="form-check-label">Remember Me</label>
                 </div>
-                <div class="col-sm-4">
-                    <div class="mb-3">
-                        <label for="province_id" class="form-label">Province: </label>
-                        <select name="province" id="province_id" class="form-control">
-                            <option value="">----SELECT PROVINCE----</option>
-                            <option value="pampanga">Pampanga</option>
-                            <option value="davao">Davao</option>
-                            <option value="isabela">Isabela</option>
-                        </select>
-                    </div>
+                <div class="mb-3">
+                    <input type="submit" name="submit" id="submit_id" value="Save" class="btn btn-primary">
                 </div>
-                <div class="col-sm-4">
-                    <div class="mb-3">
-                        <label for="zip_id" class="form-label">Zip: </label>
-                        <input type="text" name="zip" id="zip_id" placeholder="Enter Zip" class="form-control">
-                    </div>
-                </div>
-            </div>
-            <div class="form-check mb-3">
-                <input type="checkbox" id="remember_me_id" class="form-check-input">
-                <label for="remember_me_id" class="form-check-label">Remember Me</label>
-            </div>
-            <div class="mb-3">
-                <input type="submit" name="submit" id="submit_id" value="Save" class="btn btn-primary">
-            </div>
-        </form>
-    </div>
-</body>
+            </form>
+        </div>
+    </body>
 </html>
